--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,7 @@ footer {
     height: 262px;
     background-color: var(--color-black);
     color: var(--color-white);
+    font-size: 14px;
     display: flex;
     align-items: center;
 }
@@ -123,4 +124,14 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.logo-aligment img {
+    height: 30px;
+    width: 30px;
+    margin: 10px;
+}
+
+.address-aligment address {
+    text-align: center;
 }
